<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.18</version>
        <relativePath/>
    </parent>
    <groupId>com.kangli</groupId>
    <artifactId>qms-backend</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>qms-backend</name>
    <description>康立质量管理系统（QMS）后端父工程</description>
    <properties>
        <java.version>11</java.version>
        <mybatis-plus.version>3.5.5</mybatis-plus.version>
        <knife4j.version>3.0.3</knife4j.version>
        <jjwt.version>0.11.5</jjwt.version>
        <hutool.version>5.8.25</hutool.version>
    </properties>
    <modules>
        <module>qms-common</module>
        <module>qms-domain</module>
        <module>qms-service</module>
        <module>qms-api</module>
        <module>qms-bootstrap</module>
    </modules>
    <dependencyManagement>
        <dependencies>
            <dependency><groupId>com.baomidou</groupId><artifactId>mybatis-plus-boot-starter</artifactId><version>${mybatis-plus.version}</version></dependency>
            <dependency><groupId>io.jsonwebtoken</groupId><artifactId>jjwt-api</artifactId><version>${jjwt.version}</version></dependency>
            <dependency><groupId>io.jsonwebtoken</groupId><artifactId>jjwt-impl</artifactId><version>${jjwt.version}</version></dependency>
            <dependency><groupId>io.jsonwebtoken</groupId><artifactId>jjwt-jackson</artifactId><version>${jjwt.version}</version></dependency>
            <dependency><groupId>com.github.xiaoymin</groupId><artifactId>knife4j-spring-boot-starter</artifactId><version>${knife4j.version}</version></dependency>
            <dependency><groupId>cn.hutool</groupId><artifactId>hutool-all</artifactId><version>${hutool.version}</version></dependency>
            <dependency><groupId>org.apache.poi</groupId><artifactId>poi-ooxml</artifactId><version>5.2.5</version></dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration><fork>true</fork></configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
